# tuispec

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SERVER.md  SKILL.md  SPEC.md  shell.nix  tuispec-v1-spec.md  tuispec.cabal
app/: Main.hs
cbits/: tuispec_pty.c
docs/brick-example/: README.md  report.json  report.md
example/: README.md  tui-demo.cabal
example/app/: Main.hs
example/test/: IntegrationSpec.hs
scripts/: release.sh
snapshots/brick-showcase-main-flow/: checklist-progress.txt  counter-updated.txt  initial-screen.txt  theme-and-help.txt
snapshots/brick-showcase-test-isolation-reset/: reset-isolation.txt
snapshots/smoke-text-appears-in-viewport/: smoke-viewport.txt
src/: TuiSpec.hs
src/TuiSpec/: Choice.hs  Internal.hs  ProjectRoot.hs  Render.hs  Replay.hs  Runner.hs  Server.hs  Types.hs
test/: BrickDemoSpec.hs  Spec.hs  record-demo.sh
tests/tui/: README.md  tui-demo.cabal
tests/tui/app/: Main.hs
