cabal-version:      3.8
name:               tuispec
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Matthias Pall Gissurarson
maintainer:         tritlo@users.noreply.github.com
synopsis:           Starter framework for testing terminal UIs with PTY transport
category:           Testing
extra-source-files:
    README.md
    tuispec-v1-spec.md

common common-settings
    default-language: GHC2021
    ghc-options: -Wall

library
    import: common-settings
    hs-source-dirs: src
    exposed-modules:
        TuiSpec
        TuiSpec.Render
        TuiSpec.Server
        TuiSpec.Types
        TuiSpec.Runner
    build-depends:
        aeson >=2.0,
        base >=4.16 && <5,
        bytestring >=0.11,
        containers >=0.6,
        directory >=1.3,
        filepath >=1.4,
        jsonrpc >=0.2 && <0.3,
        posix-pty >=0.2,
        process >=1.6,
        tasty >=1.4,
        tasty-hunit >=0.10,
        text >=1.2,
        time >=1.9,
        unix >=2.8

executable tuispec
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16 && <5,
        optparse-applicative >=0.18,
        tuispec

test-suite tuispec-smoke
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        base >=4.16 && <5,
        directory >=1.3,
        tasty >=1.4,
        tasty-hunit >=0.10,
        text >=1.2,
        tuispec
