cabal-version:      3.8
name:               tui-demo
version:            0.1.0.0
build-type:         Simple
license:            MIT
author:             Matthias Pall Gissurarson
maintainer:         tritlo@users.noreply.github.com
synopsis:           Simple Brick counter app for tuispec integration testing
category:           Demo

common common-settings
    default-language: GHC2021
    ghc-options: -Wall -threaded -dynamic

executable tui-demo
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16 && <5,
        brick >=2.4,
        mtl >=2.2,
        vty >=6.0

test-suite tui-demo-integration
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: IntegrationSpec.hs
    build-tool-depends:
        tui-demo:tui-demo
    build-depends:
        base >=4.16 && <5,
        tasty >=1.4,
        tasty-hunit >=0.10,
        text >=1.2,
        tuispec
